src-tauri/src/c/inc/ControlCANFDx64.h

typedef struct {
UINT	can_id;  /*  32 bit MAKE_CAN_ID + EFF/RTR/ERR flags */
BYTE    can_dlc; /*  frame payload length in byte (0 .. CAN_MAX_DLEN) */
BYTE    __pad;   /*  padding */
BYTE    __res0;  /*  reserved / padding */ 
BYTE    __res1;  /*  reserved / padding */
BYTE    data[CAN_MAX_DLEN]/* __attribute__((aligned(8)))*/;
}can_frame;
typedef struct {
UINT    can_id;  /*  32 bit MAKE_CAN_ID + EFF/RTR/ERR flags */
BYTE    len;     /*  frame payload length in byte */
BYTE    flags;   /*  additional flags for CAN FD,i.e error code */
BYTE    __res0;  /*  reserved / padding */
BYTE    __res1;  /*  reserved / padding */
BYTE    data[CANFD_MAX_DLEN]/* __attribute__((aligned(8)))*/;
}canfd_frame;
typedef struct tagZCAN_DEVICE_INFO {
USHORT hw_Version;
USHORT fw_Version;
USHORT dr_Version;
USHORT in_Version;
USHORT irq_Num;
BYTE   can_Num;
UCHAR  str_Serial_Num[20];
UCHAR  str_hw_Type[40];
USHORT reserved[4];
}ZCAN_DEVICE_INFO;
typedef struct tagZCAN_CHANNEL_INIT_CONFIG {
UINT can_type; // type:TYPE_CAN(0) TYPE_CANFD(1)
union
{
struct
{
UINT  acc_code;
UINT  acc_mask;
UINT  reserved;
BYTE  filter;
BYTE  timing0;
BYTE  timing1;
BYTE  mode;
}can;
struct
{
UINT   acc_code;
UINT   acc_mask;
UINT   abit_timing;
UINT   dbit_timing;
UINT   brp;
BYTE   filter;
BYTE   mode;
USHORT pad;
UINT   reserved;
}canfd;
};
}ZCAN_CHANNEL_INIT_CONFIG;
typedef struct tagZCAN_Transmit_Data
{
can_frame frame;
UINT transmit_type;
}ZCAN_Transmit_Data;
typedef struct tagZCAN_Receive_Data
{
can_frame frame;
UINT64    timestamp;// us
}ZCAN_Receive_Data;
typedef struct tagZCAN_TransmitFD_Data
{
canfd_frame frame;
UINT transmit_type;
}ZCAN_TransmitFD_Data;
typedef struct tagZCAN_ReceiveFD_Data
{
canfd_frame frame;
UINT64      timestamp;// us
}ZCAN_ReceiveFD_Data;
//********************The following content is the same as ControlCAN. h************************************************************//

/*------------ZLG compatible functions and data types---------------------------------*/

//1. The data type of ZLG series CAN interface card information.
typedef  struct  _VCI_BOARD_INFO{
USHORT	hw_Version;
USHORT	fw_Version;
USHORT	dr_Version;
USHORT	in_Version;
USHORT	irq_Num;
BYTE	can_Num;
CHAR	str_Serial_Num[20];
CHAR	str_hw_Type[40];
USHORT	Reserved[4]; 	
} VCI_BOARD_INFO,*PVCI_BOARD_INFO;
 

//2. Define the data type of CAN information frames.
typedef  struct  _VCI_CAN_OBJ{

UINT	ID;
UINT	TimeStamp;
BYTE	TimeFlag;
BYTE	SendType;
BYTE	RemoteFlag;
BYTE	ExternFlag;
BYTE	DataLen;
BYTE	Data[8];
BYTE	Reserved[3];
}VCI_CAN_OBJ,*PVCI_CAN_OBJ;
//3. Define the data type of CAN controller status.
typedef struct _VCI_CAN_STATUS{
UCHAR	ErrInterrupt;
UCHAR	regMode;
UCHAR	regStatus;
UCHAR	regALCapture;
UCHAR	regECCapture;
UCHAR	regEWLimit;
UCHAR	regRECounter;
UCHAR	regTECounter;
DWORD	Reserved;
}VCI_CAN_STATUS,*PVCI_CAN_STATUS;
//4. Define the data type for error messages.
typedef struct _ERR_INFO{
UINT	ErrCode;
BYTE	Passive_ErrData[3];
BYTE	ArLost_ErrData;
} VCI_ERR_INFO,*PVCI_ERR_INFO;
//5. Define the data type for initializing CAN
typedef struct _INIT_CONFIG{
DWORD	AccCode;
DWORD	AccMask;
DWORD	Reserved;
UCHAR	Filter;
UCHAR	Timing0; 	
UCHAR	Timing1; 	
UCHAR	Mode;
}VCI_INIT_CONFIG,*PVCI_INIT_CONFIG;
///////// new add struct for filter /////////
typedef struct _VCI_FILTER_RECORD{
DWORD ExtFrame; //Is it an extended frame
DWORD Start;
DWORD End;
}VCI_FILTER_RECORD,*PVCI_FILTER_RECORD;
typedef void * DEVICE_HANDLE;
typedef void * CHANNEL_HANDLE;
DEVICE_HANDLE FUNC_CALL ZCAN_OpenDevice(UINT device_type, UINT device_index, UINT reserved);
UINT FUNC_CALL ZCAN_CloseDevice(DEVICE_HANDLE device_handle);
UINT FUNC_CALL ZCAN_GetDeviceInf(DEVICE_HANDLE device_handle, ZCAN_DEVICE_INFO* pInfo);
UINT FUNC_CALL ZCAN_IsDeviceOnLine(DEVICE_HANDLE device_handle);
CHANNEL_HANDLE FUNC_CALL ZCAN_InitCAN(DEVICE_HANDLE device_handle, UINT can_index, ZCAN_CHANNEL_INIT_CONFIG* pInitConfig);
UINT FUNC_CALL ZCAN_StartCAN(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL ZCAN_ResetCAN(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL ZCAN_ClearBuffer(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL ZCAN_GetReceiveNum(CHANNEL_HANDLE channel_handle, BYTE type);// type:TYPE_CAN TYPE_CANFD
UINT FUNC_CALL ZCAN_Transmit(CHANNEL_HANDLE channel_handle, ZCAN_Transmit_Data* pTransmit, UINT len);
UINT FUNC_CALL ZCAN_Receive(CHANNEL_HANDLE channel_handle, ZCAN_Receive_Data* pReceive, UINT len, int wait_time);
UINT FUNC_CALL ZCAN_TransmitFD(CHANNEL_HANDLE channel_handle, ZCAN_TransmitFD_Data* pTransmit, UINT len);
UINT FUNC_CALL ZCAN_ReceiveFD(CHANNEL_HANDLE channel_handle, ZCAN_ReceiveFD_Data* pReceive, UINT len, int wait_time);
IProperty* FUNC_CALL GetIProperty(DEVICE_HANDLE device_handle);
UINT FUNC_CALL ReleaseIProperty(IProperty * pIProperty);
UINT FUNC_CALL ZCAN_SetAbitBaud(DEVICE_HANDLE device_handle, UINT can_index, UINT abitbaud);
UINT FUNC_CALL ZCAN_SetDbitBaud(DEVICE_HANDLE device_handle, UINT can_index, UINT dbitbaud);
UINT FUNC_CALL ZCAN_SetCANFDStandard(DEVICE_HANDLE device_handle, UINT can_index, UINT canfd_standard);
UINT FUNC_CALL ZCAN_SetResistanceEnable(DEVICE_HANDLE device_handle, UINT can_index, UINT enable);
UINT FUNC_CALL ZCAN_SetBaudRateCustom(DEVICE_HANDLE device_handle, UINT can_index, char * RateCustom);
UINT FUNC_CALL ZCAN_ClearFilter(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL ZCAN_AckFilter(CHANNEL_HANDLE channel_handle);