src-tauri/src/c/inc/config.h

/**
*Retrieve the description information of the attribute.
*
* \retval ConfigNode
*/
typedef const ConfigNode* (*GetPropertysFunc)();
/**
*Set the value of the attribute of the specified path.
*\ parameter [in] path: The path of the attribute.
*\ param [in] value: The value of the attribute.
*
*Retval returns 1 for success and 0 for failure.
*/
typedef int (*SetValueFunc)(const char* path, const char* value);
/**
*Retrieve the value of the attribute of the specified path.
*\ parameter [in] path: The path of the attribute.
*Retval successfully returns the value of the property, while failure returns NULL.
*/
typedef const char* (*GetValueFunc)(const char* path);
typedef struct  tagIProperty
{
SetValueFunc     SetValue;
GetValueFunc     GetValue;
GetPropertysFunc GetPropertys;
}IProperty;