src-tauri/src/models/WSFdCan/fdcan_c.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_ReceiveFD_Data"][::std::mem::size_of::<tagZCAN_ReceiveFD_Data>() - 80usize];
    ["Alignment of tagZCAN_ReceiveFD_Data"]
        [::std::mem::align_of::<tagZCAN_ReceiveFD_Data>() - 8usize];
    ["Offset of field: tagZCAN_ReceiveFD_Data::frame"]
        [::std::mem::offset_of!(tagZCAN_ReceiveFD_Data, frame) - 0usize];
    ["Offset of field: tagZCAN_ReceiveFD_Data::timestamp"]
        [::std::mem::offset_of!(tagZCAN_ReceiveFD_Data, timestamp) - 72usize];
};
pub type ZCAN_ReceiveFD_Data = tagZCAN_ReceiveFD_Data;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _VCI_BOARD_INFO {
    pub hw_Version: USHORT,
    pub fw_Version: USHORT,
    pub dr_Version: USHORT,
    pub in_Version: USHORT,
    pub irq_Num: USHORT,
    pub can_Num: BYTE,
    pub str_Serial_Num: [CHAR; 20usize],
    pub str_hw_Type: [CHAR; 40usize],
    pub Reserved: [USHORT; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _VCI_BOARD_INFO"][::std::mem::size_of::<_VCI_BOARD_INFO>() - 80usize];
    ["Alignment of _VCI_BOARD_INFO"][::std::mem::align_of::<_VCI_BOARD_INFO>() - 2usize];
    ["Offset of field: _VCI_BOARD_INFO::hw_Version"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, hw_Version) - 0usize];
    ["Offset of field: _VCI_BOARD_INFO::fw_Version"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, fw_Version) - 2usize];
    ["Offset of field: _VCI_BOARD_INFO::dr_Version"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, dr_Version) - 4usize];
    ["Offset of field: _VCI_BOARD_INFO::in_Version"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, in_Version) - 6usize];
    ["Offset of field: _VCI_BOARD_INFO::irq_Num"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, irq_Num) - 8usize];
    ["Offset of field: _VCI_BOARD_INFO::can_Num"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, can_Num) - 10usize];
    ["Offset of field: _VCI_BOARD_INFO::str_Serial_Num"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, str_Serial_Num) - 11usize];
    ["Offset of field: _VCI_BOARD_INFO::str_hw_Type"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, str_hw_Type) - 31usize];
    ["Offset of field: _VCI_BOARD_INFO::Reserved"]
        [::std::mem::offset_of!(_VCI_BOARD_INFO, Reserved) - 72usize];
};
pub type VCI_BOARD_INFO = _VCI_BOARD_INFO;
pub type PVCI_BOARD_INFO = *mut _VCI_BOARD_INFO;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _VCI_CAN_OBJ {
    pub ID: UINT,
    pub TimeStamp: UINT,
    pub TimeFlag: BYTE,
    pub SendType: BYTE,
    pub RemoteFlag: BYTE,
    pub ExternFlag: BYTE,
    pub DataLen: BYTE,
    pub Data: [BYTE; 8usize],
    pub Reserved: [BYTE; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _VCI_CAN_OBJ"][::std::mem::size_of::<_VCI_CAN_OBJ>() - 24usize];
    ["Alignment of _VCI_CAN_OBJ"][::std::mem::align_of::<_VCI_CAN_OBJ>() - 4usize];
    ["Offset of field: _VCI_CAN_OBJ::ID"][::std::mem::offset_of!(_VCI_CAN_OBJ, ID) - 0usize];
    ["Offset of field: _VCI_CAN_OBJ::TimeStamp"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, TimeStamp) - 4usize];
    ["Offset of field: _VCI_CAN_OBJ::TimeFlag"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, TimeFlag) - 8usize];
    ["Offset of field: _VCI_CAN_OBJ::SendType"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, SendType) - 9usize];
    ["Offset of field: _VCI_CAN_OBJ::RemoteFlag"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, RemoteFlag) - 10usize];
    ["Offset of field: _VCI_CAN_OBJ::ExternFlag"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, ExternFlag) - 11usize];
    ["Offset of field: _VCI_CAN_OBJ::DataLen"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, DataLen) - 12usize];
    ["Offset of field: _VCI_CAN_OBJ::Data"][::std::mem::offset_of!(_VCI_CAN_OBJ, Data) - 13usize];
    ["Offset of field: _VCI_CAN_OBJ::Reserved"]
        [::std::mem::offset_of!(_VCI_CAN_OBJ, Reserved) - 21usize];
};
pub type VCI_CAN_OBJ = _VCI_CAN_OBJ;
pub type PVCI_CAN_OBJ = *mut _VCI_CAN_OBJ;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _VCI_CAN_STATUS {
    pub ErrInterrupt: UCHAR,
    pub regMode: UCHAR,
    pub regStatus: UCHAR,
    pub regALCapture: UCHAR,
    pub regECCapture: UCHAR,
    pub regEWLimit: UCHAR,
    pub regRECounter: UCHAR,
    pub regTECounter: UCHAR,
    pub Reserved: DWORD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _VCI_CAN_STATUS"][::std::mem::size_of::<_VCI_CAN_STATUS>() - 12usize];
    ["Alignment of _VCI_CAN_STATUS"][::std::mem::align_of::<_VCI_CAN_STATUS>() - 4usize];
    ["Offset of field: _VCI_CAN_STATUS::ErrInterrupt"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, ErrInterrupt) - 0usize];
    ["Offset of field: _VCI_CAN_STATUS::regMode"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regMode) - 1usize];
    ["Offset of field: _VCI_CAN_STATUS::regStatus"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regStatus) - 2usize];
    ["Offset of field: _VCI_CAN_STATUS::regALCapture"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regALCapture) - 3usize];
    ["Offset of field: _VCI_CAN_STATUS::regECCapture"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regECCapture) - 4usize];
    ["Offset of field: _VCI_CAN_STATUS::regEWLimit"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regEWLimit) - 5usize];
    ["Offset of field: _VCI_CAN_STATUS::regRECounter"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regRECounter) - 6usize];
    ["Offset of field: _VCI_CAN_STATUS::regTECounter"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, regTECounter) - 7usize];
    ["Offset of field: _VCI_CAN_STATUS::Reserved"]
        [::std::mem::offset_of!(_VCI_CAN_STATUS, Reserved) - 8usize];
};
pub type VCI_CAN_STATUS = _VCI_CAN_STATUS;
pub type PVCI_CAN_STATUS = *mut _VCI_CAN_STATUS;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ERR_INFO {
    pub ErrCode: UINT,
    pub Passive_ErrData: [BYTE; 3usize],
    pub ArLost_ErrData: BYTE,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ERR_INFO"][::std::mem::size_of::<_ERR_INFO>() - 8usize];
    ["Alignment of _ERR_INFO"][::std::mem::align_of::<_ERR_INFO>() - 4usize];
    ["Offset of field: _ERR_INFO::ErrCode"][::std::mem::offset_of!(_ERR_INFO, ErrCode) - 0usize];
    ["Offset of field: _ERR_INFO::Passive_ErrData"]
        [::std::mem::offset_of!(_ERR_INFO, Passive_ErrData) - 4usize];
    ["Offset of field: _ERR_INFO::ArLost_ErrData"]
        [::std::mem::offset_of!(_ERR_INFO, ArLost_ErrData) - 7usize];
};
pub type VCI_ERR_INFO = _ERR_INFO;
pub type PVCI_ERR_INFO = *mut _ERR_INFO;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _INIT_CONFIG {
    pub AccCode: DWORD,
    pub AccMask: DWORD,
    pub Reserved: DWORD,
    pub Filter: UCHAR,
    pub Timing0: UCHAR,
    pub Timing1: UCHAR,
    pub Mode: UCHAR,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _INIT_CONFIG"][::std::mem::size_of::<_INIT_CONFIG>() - 16usize];
    ["Alignment of _INIT_CONFIG"][::std::mem::align_of::<_INIT_CONFIG>() - 4usize];
    ["Offset of field: _INIT_CONFIG::AccCode"]
        [::std::mem::offset_of!(_INIT_CONFIG, AccCode) - 0usize];
    ["Offset of field: _INIT_CONFIG::AccMask"]
        [::std::mem::offset_of!(_INIT_CONFIG, AccMask) - 4usize];
    ["Offset of field: _INIT_CONFIG::Reserved"]
        [::std::mem::offset_of!(_INIT_CONFIG, Reserved) - 8usize];
    ["Offset of field: _INIT_CONFIG::Filter"]
        [::std::mem::offset_of!(_INIT_CONFIG, Filter) - 12usize];
    ["Offset of field: _INIT_CONFIG::Timing0"]
        [::std::mem::offset_of!(_INIT_CONFIG, Timing0) - 13usize];
    ["Offset of field: _INIT_CONFIG::Timing1"]
        [::std::mem::offset_of!(_INIT_CONFIG, Timing1) - 14usize];
    ["Offset of field: _INIT_CONFIG::Mode"][::std::mem::offset_of!(_INIT_CONFIG, Mode) - 15usize];
};
pub type VCI_INIT_CONFIG = _INIT_CONFIG;
pub type PVCI_INIT_CONFIG = *mut _INIT_CONFIG;
#[doc = " new add struct for filter /////////"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _VCI_FILTER_RECORD {
    pub ExtFrame: DWORD,
    pub Start: DWORD,
    pub End: DWORD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _VCI_FILTER_RECORD"][::std::mem::size_of::<_VCI_FILTER_RECORD>() - 12usize];
    ["Alignment of _VCI_FILTER_RECORD"][::std::mem::align_of::<_VCI_FILTER_RECORD>() - 4usize];
    ["Offset of field: _VCI_FILTER_RECORD::ExtFrame"]
        [::std::mem::offset_of!(_VCI_FILTER_RECORD, ExtFrame) - 0usize];
    ["Offset of field: _VCI_FILTER_RECORD::Start"]
        [::std::mem::offset_of!(_VCI_FILTER_RECORD, Start) - 4usize];
    ["Offset of field: _VCI_FILTER_RECORD::End"]
        [::std::mem::offset_of!(_VCI_FILTER_RECORD, End) - 8usize];
};
#[doc = " new add struct for filter /////////"]
pub type VCI_FILTER_RECORD = _VCI_FILTER_RECORD;
#[doc = " new add struct for filter /////////"]
pub type PVCI_FILTER_RECORD = *mut _VCI_FILTER_RECORD;
pub type DEVICE_HANDLE = *mut ::std::os::raw::c_void;
pub type CHANNEL_HANDLE = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    pub fn ZCAN_OpenDevice(device_type: UINT, device_index: UINT, reserved: UINT) -> DEVICE_HANDLE;
}
unsafe extern "C" {
    pub fn ZCAN_CloseDevice(device_handle: DEVICE_HANDLE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_GetDeviceInf(device_handle: DEVICE_HANDLE, pInfo: *mut ZCAN_DEVICE_INFO) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_IsDeviceOnLine(device_handle: DEVICE_HANDLE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_InitCAN(
        device_handle: DEVICE_HANDLE,
        can_index: UINT,
        pInitConfig: *mut ZCAN_CHANNEL_INIT_CONFIG,
    ) -> CHANNEL_HANDLE;
}
unsafe extern "C" {
    pub fn ZCAN_StartCAN(channel_handle: CHANNEL_HANDLE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_ResetCAN(channel_handle: CHANNEL_HANDLE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_ClearBuffer(channel_handle: CHANNEL_HANDLE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_GetReceiveNum(channel_handle: CHANNEL_HANDLE, type_: BYTE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_Transmit(
        channel_handle: CHANNEL_HANDLE,
        pTransmit: *mut ZCAN_Transmit_Data,
        len: UINT,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_Receive(
        channel_handle: CHANNEL_HANDLE,
        pReceive: *mut ZCAN_Receive_Data,
        len: UINT,
        wait_time: ::std::os::raw::c_int,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_TransmitFD(
        channel_handle: CHANNEL_HANDLE,
        pTransmit: *mut ZCAN_TransmitFD_Data,
        len: UINT,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_ReceiveFD(
        channel_handle: CHANNEL_HANDLE,
        pReceive: *mut ZCAN_ReceiveFD_Data,
        len: UINT,
        wait_time: ::std::os::raw::c_int,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn GetIProperty(device_handle: DEVICE_HANDLE) -> *mut IProperty;
}
unsafe extern "C" {
    pub fn ReleaseIProperty(pIProperty: *mut IProperty) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetAbitBaud(device_handle: DEVICE_HANDLE, can_index: UINT, abitbaud: UINT) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetDbitBaud(device_handle: DEVICE_HANDLE, can_index: UINT, dbitbaud: UINT) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetCANFDStandard(
        device_handle: DEVICE_HANDLE,
        can_index: UINT,
        canfd_standard: UINT,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetResistanceEnable(
        device_handle: DEVICE_HANDLE,
        can_index: UINT,
        enable: UINT,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetBaudRateCustom(
        device_handle: DEVICE_HANDLE,
        can_index: UINT,
        RateCustom: *mut ::std::os::raw::c_char,
    ) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_ClearFilter(channel_handle: CHANNEL_HANDLE) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_AckFilter(channel_handle: CHANNEL_HANDLE) -> UINT;
}
